mvp: edit swagger notation
